# SC-generation-stimulation

PyNLO/: README.rst
PyNLO/PyNLO/: .gitignore  model.py  pyproject.toml
PyNLO/PyNLO/docs/source/api/: pynlo.light.Pulse.phi_t.rst  pynlo.light.Pulse.t_width.rst  pynlo.medium.Mode.g2_pol.rst  pynlo.medium.Mode.g3.rst  pynlo.medium.Mode.n_g.rst  pynlo.medium.Mode.v_grid.rst  pynlo.medium.Mode.z.rst  pynlo.medium.Mode.z_mode.rst  pynlo.model.NLSE.propagate.rst  pynlo.model.UPE.nonlinear_operator.rst  pynlo.model.UPE.update_nonlinearity.rst  pynlo.utility.TFGrid.FromFreqRange.rst  pynlo.utility.TFGrid.t_ref.rst  pynlo.utility.chi2.domain_inversions.rst  pynlo.utility.chi2.g2_split.rst  pynlo.utility.chi3.g3_spm.rst  pynlo.utility.fft.ifftshift.rst  pynlo.utility.resample_v.rst
PyNLO/PyNLO/docs/source/examples/: ppln_cascaded-chi2.rst
PyNLO/PyNLO/examples/: optical-solitons.py  ppln_cascaded-chi2.py  silica-pcf_supercontinuum.py
PyNLO/PyNLO/pynlo/: light.py  medium.py
PyNLO/PyNLO/tests/: test_utility.py
PyNLO/PyNLO/utility/: chi1.py  chi2.py  fft.py  misc.py
PyNLO/docs/: index.html
SCG_Stimulation/: 1.ipynb  2.ipynb  generate_neff_and_aeff.py  refractive_index.py  template.ipynb  test_SPM.ipynb  test_SPM_and_GVD.ipynb
Waveguides NLO/: Waveguide Propagation.ipynb  Waveguide using NLO.ipynb  pyNLO Trial.ipynb
Waveguides-laserfun/: Dudley et al.ipynb  Fiber @ QuantX.ipynb  How To Use  Length Dependance.ipynb  Pulse Propagation.ipynb  SiN Waveguide.ipynb  Simple.ipynb  Trial For QuantX.ipynb
laserfun/: __init__.py  fiber.py  nlse.py  pulse.py
(+376 files in other folders)
