[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pynlo"
description = 'Python nonlinear optics'
readme = "README.rst"
license = {file = "COPYING.LESSER.txt"}
dependencies = [
    "numpy>=1.17",
    "scipy>=1.4",
    "numba",
    "mkl_fft>=1.3"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pynlo.__version__"}
